// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Breadcrumb empty breadcrumb 1`] = `
<div>
  <nav
    aria-label="breadcrumb"
  >
    <ol
      class="breadcrumb"
    />
  </nav>
</div>
`;

exports[`Breadcrumb one link 1`] = `
<div>
  <nav
    aria-label="breadcrumb"
  >
    <ol
      class="breadcrumb"
    >
      <li
        aria-current="[object Object]"
        class="breadcrumb-item"
      >
        <a
          href="#link"
        >
          
          link one
        
        </a>
      </li>
    </ol>
  </nav>
</div>
`;

exports[`Breadcrumb one non-link 1`] = `
<div>
  <nav
    aria-label="breadcrumb"
  >
    <ol
      class="breadcrumb"
    >
      <li
        aria-current="[object Object]"
        class="breadcrumb-item notlink"
      >
        <a>
          
          non-link one
        
        </a>
      </li>
    </ol>
  </nav>
</div>
`;

exports[`Breadcrumb two link 1`] = `
<div>
  <nav
    aria-label="breadcrumb"
  >
    <ol
      class="breadcrumb"
    >
      <li
        aria-current="[object Object]"
        class="breadcrumb-item"
      >
        <a
          href="#linkone"
        >
          
          link one
        
        </a>
      </li>
      <li
        aria-current="[object Object]"
        class="breadcrumb-item"
      >
        <a
          href="#linktwo"
        >
          
          link two
        
        </a>
      </li>
    </ol>
  </nav>
</div>
`;

exports[`Breadcrumb two non-link 1`] = `
<div>
  <nav
    aria-label="breadcrumb"
  >
    <ol
      class="breadcrumb"
    >
      <li
        aria-current="[object Object]"
        class="breadcrumb-item notlink"
      >
        <a>
          
          link one
        
        </a>
      </li>
      <li
        aria-current="[object Object]"
        class="breadcrumb-item notlink"
      >
        <a>
          
          link two
        
        </a>
      </li>
    </ol>
  </nav>
</div>
`;
